Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-1890

[Python] Masking for date32 arrays not working

    XMLWordPrintableJSON

Details

    Description

      arr = np.array([date(2017, 4, 3), date(2017, 4, 4)], dtype='datetime64[D]')
      mask = [True, False]
      t32 = pa.date32()
      result = pa.array(arr, mask=np.array(mask))
      expected = pa.array(np.array([None, date(2017, 4, 4)], dtype='datetime64[D]'))
      

      The above code produces an array that has no null values.

      Attachments

        Issue Links

          Activity

            People

              uwe Uwe Korn
              uwe Uwe Korn
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: