ARROW-1890: [Python] Fix mask handling for Date32 NumPy conversions

Author: Uwe L. Korn <uwelk@xhochy.com>

Closes #1393 from xhochy/ARROW-1890 and squashes the following commits:

7ef92ea [Uwe L. Korn] ARROW-1890: [Python] Fix mask handling for Date32 NumPy conversions